--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "rest-css": "^0.1.1",
     "vue": "^2.4.2"
   },
   "devDependencies": {
