--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "chalk": "^2.0.1",
         "connect-history-api-fallback": "^1.3.0",
         "copy-webpack-plugin": "^4.0.1",
-        "css-loader": "^0.28.0",
+        "css-loader": "^0.28.7",
         "cssnano": "^3.10.0",
         "eventsource-polyfill": "^0.9.6",
         "express": "^4.14.1",
@@ -38,10 +38,13 @@
         "http-proxy-middleware": "^0.17.3",
         "less": "^2.7.2",
         "less-loader": "^4.0.5",
+        "node-sass": "^4.7.2",
         "opn": "^5.1.0",
         "optimize-css-assets-webpack-plugin": "^2.0.0",
         "ora": "^1.2.0",
         "rimraf": "^2.6.0",
+        "sass-loader": "^6.0.6",
+        "sass-resources-loader": "^1.3.1",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
         "url-loader": "^0.5.8",
